# tree-sitter-mtf

./: CMakeLists.txt  Cargo.toml  Makefile  grammar.js  package.json  tree-sitter.json
bindings/c/: tree-sitter-mtf.h  tree-sitter-mtf.pc.in
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
